--- a/www.nass.gov.ng/312eef1a4e73bbf80ba5f5d54d8b4e6e572e50da.yml
+++ b/www.nass.gov.ng/312eef1a4e73bbf80ba5f5d54d8b4e6e572e50da.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 18:46:09 GMT
+    - Thu, 16 Aug 2018 16:01:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=gGaad7Gs-aBKLCNJC5eSL3; path=/
+    - PHPSESSID=pgPz-9zO5FyoOCooYJk%2Cv1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 18:46:10 GMT
+recorded_at: Thu, 16 Aug 2018 16:01:14 GMT
