--- a/www.nass.gov.ng/a639d603e777bd8b6bf63d2d1fe29d34e5f8fefc.yml
+++ b/www.nass.gov.ng/a639d603e777bd8b6bf63d2d1fe29d34e5f8fefc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 18:49:16 GMT
+    - Thu, 16 Aug 2018 16:04:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4%2CxgBUaC1sx1TY1GAwh610; path=/
+    - PHPSESSID=YKyYpGM94iEDgh8KXbAa-2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 18:49:16 GMT
+recorded_at: Thu, 16 Aug 2018 16:04:24 GMT
