--- a/www.nass.gov.ng/2744f90c641aa3b78e331ee0a6706d996a7839a2.yml
+++ b/www.nass.gov.ng/2744f90c641aa3b78e331ee0a6706d996a7839a2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 18:50:05 GMT
+    - Thu, 16 Aug 2018 16:05:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Hwj%2CnFmlSXXY6BdnfA7u02; path=/
+    - PHPSESSID=CGMymvrG5eJxamsW53TFw1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 18:50:05 GMT
+recorded_at: Thu, 16 Aug 2018 16:05:14 GMT
