--- a/www.nass.gov.ng/db9b672133bc51cf6737a84f2dac2d65b09ce95f.yml
+++ b/www.nass.gov.ng/db9b672133bc51cf6737a84f2dac2d65b09ce95f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 19:02:45 GMT
+    - Thu, 16 Aug 2018 16:18:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qKTkXIdYAqNSSY848ifV13; path=/
+    - PHPSESSID=jj4KK4IU8LS06P%2Coxz5Pw1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 19:02:45 GMT
+recorded_at: Thu, 16 Aug 2018 16:18:00 GMT
