--- a/www.nass.gov.ng/05bd37a7b5db46b32a88eb2c1ac75ae0296d951a.yml
+++ b/www.nass.gov.ng/05bd37a7b5db46b32a88eb2c1ac75ae0296d951a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 19:28:02 GMT
+    - Thu, 16 Aug 2018 16:41:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=cGEpqBDOje2y124M%2CQvFG0; path=/
+    - PHPSESSID=nQES0tbgfqs-3f3rhd-av2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 19:28:02 GMT
+recorded_at: Thu, 16 Aug 2018 16:41:39 GMT
