--- a/www.nass.gov.ng/7c32cf58b00fa7de3d34aeb9b8257aca197e8595.yml
+++ b/www.nass.gov.ng/7c32cf58b00fa7de3d34aeb9b8257aca197e8595.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 19:29:09 GMT
+    - Thu, 16 Aug 2018 16:42:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VNgPfH-7emefmISnZh%2CXI3; path=/
+    - PHPSESSID=YSjj1HDO6RXjXTFImrLr03; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 19:29:10 GMT
+recorded_at: Thu, 16 Aug 2018 16:42:29 GMT
