--- a/www.nass.gov.ng/fcabc9f11ebb6a4797d79749745da6723cd60df2.yml
+++ b/www.nass.gov.ng/fcabc9f11ebb6a4797d79749745da6723cd60df2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 19:32:35 GMT
+    - Thu, 16 Aug 2018 16:46:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-CJJ2joDF5OWT7794phD-3; path=/
+    - PHPSESSID=pe6cAOQj94bL69D%2CQYVrz2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 19:32:35 GMT
+recorded_at: Thu, 16 Aug 2018 16:46:30 GMT
