--- a/www.nass.gov.ng/a74095d61c5341e9bdb31078e3f7d936e35f8606.yml
+++ b/www.nass.gov.ng/a74095d61c5341e9bdb31078e3f7d936e35f8606.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 20:13:54 GMT
+    - Thu, 16 Aug 2018 17:25:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=pv%2COu-GzFOH3sWtO5LLA83; path=/
+    - PHPSESSID=W51Zfffp-sPUK9Zppge4H2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 20:13:54 GMT
+recorded_at: Thu, 16 Aug 2018 17:25:03 GMT
