--- a/www.nass.gov.ng/69804a65166f3f9c6ab5d2d1bf6afe12db1397a8.yml
+++ b/www.nass.gov.ng/69804a65166f3f9c6ab5d2d1bf6afe12db1397a8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 20:42:31 GMT
+    - Thu, 16 Aug 2018 17:52:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0datQfEhqIni4vvA4%2CEDe0; path=/
+    - PHPSESSID=tET9IfJ%2CmhCQg1CTuabCr1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 20:42:31 GMT
+recorded_at: Thu, 16 Aug 2018 17:52:56 GMT
