--- a/www.nass.gov.ng/39ab04003af26e74484d3bc091154ab6ea6c923f.yml
+++ b/www.nass.gov.ng/39ab04003af26e74484d3bc091154ab6ea6c923f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 20:46:29 GMT
+    - Thu, 16 Aug 2018 17:55:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PcnQEc1wHfHG0N%2CrpIYZV0; path=/
+    - PHPSESSID=ERrOXDyr-LSE8i0CZgofG0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 20:46:29 GMT
+recorded_at: Thu, 16 Aug 2018 17:55:18 GMT
