--- a/www.nass.gov.ng/2216f520261a809623e049dfed0bf8b43751146a.yml
+++ b/www.nass.gov.ng/2216f520261a809623e049dfed0bf8b43751146a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 20:47:21 GMT
+    - Thu, 16 Aug 2018 17:56:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4MDoBMo4%2CVhNXZMYGYwMM3; path=/
+    - PHPSESSID=hy6rowQLh1ZHEfRQDmo3L1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 20:47:21 GMT
+recorded_at: Thu, 16 Aug 2018 17:56:08 GMT
