--- a/www.nass.gov.ng/6f1635e395860c0e17227bd5e3991e29273c8b87.yml
+++ b/www.nass.gov.ng/6f1635e395860c0e17227bd5e3991e29273c8b87.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 20:59:25 GMT
+    - Thu, 16 Aug 2018 18:09:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=K9eG-1Vh6U7U%2CaGvftFoL0; path=/
+    - PHPSESSID=a5REc3k5WSq96Kghq1Dve2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 20:59:25 GMT
+recorded_at: Thu, 16 Aug 2018 18:09:03 GMT
