--- a/www.nass.gov.ng/9efd94bd1785816f79f2dba3b7263839c126a6b4.yml
+++ b/www.nass.gov.ng/9efd94bd1785816f79f2dba3b7263839c126a6b4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 21:05:32 GMT
+    - Thu, 16 Aug 2018 18:16:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=MWPHo9qn6cy4zubCZ3ibS1; path=/
+    - PHPSESSID=O996n2H-dZ8AgywYV%2CMwQ0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 21:05:32 GMT
+recorded_at: Thu, 16 Aug 2018 18:16:09 GMT
