--- a/www.nass.gov.ng/790c169644f3191d15efa711d5065594f8ae8e17.yml
+++ b/www.nass.gov.ng/790c169644f3191d15efa711d5065594f8ae8e17.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 21:14:07 GMT
+    - Thu, 16 Aug 2018 18:24:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4eHiiPU9Y%2C1U6a0HAEYbK1; path=/
+    - PHPSESSID=KPemxdAAhan2AVXItbrMK2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 21:14:07 GMT
+recorded_at: Thu, 16 Aug 2018 18:24:51 GMT
