--- a/www.nass.gov.ng/ae224f87a7c7d4e459d027a62a771ab9b4416d95.yml
+++ b/www.nass.gov.ng/ae224f87a7c7d4e459d027a62a771ab9b4416d95.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 21:24:28 GMT
+    - Thu, 16 Aug 2018 18:33:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=wTehVQXqR25hMmaBbt14I0; path=/
+    - PHPSESSID=W1VLobizTOZVyBmCehU%2C81; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 21:24:28 GMT
+recorded_at: Thu, 16 Aug 2018 18:33:43 GMT
