--- a/www.nass.gov.ng/7a3abc9e1b140d7739a1e62b8bf330973e02bf7d.yml
+++ b/www.nass.gov.ng/7a3abc9e1b140d7739a1e62b8bf330973e02bf7d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 21:30:59 GMT
+    - Thu, 16 Aug 2018 18:40:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=pLe-RwSv1e6%2CvskoGxFJF1; path=/
+    - PHPSESSID=s2vMHp7PqrJbWJPIHtSIP1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 21:30:59 GMT
+recorded_at: Thu, 16 Aug 2018 18:40:11 GMT
