--- a/www.nass.gov.ng/0a3188b0496d108ddcf3a2a9523440afc53f7a27.yml
+++ b/www.nass.gov.ng/0a3188b0496d108ddcf3a2a9523440afc53f7a27.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 21:35:42 GMT
+    - Thu, 16 Aug 2018 18:44:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=eisSZz5LwpB929%2Cy7Xjh00; path=/
+    - PHPSESSID=LbclC4noTv-hticGpQyxm1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 21:35:42 GMT
+recorded_at: Thu, 16 Aug 2018 18:44:22 GMT
