--- a/www.nass.gov.ng/65148814874b99b1499a9d53f19b01290107f236.yml
+++ b/www.nass.gov.ng/65148814874b99b1499a9d53f19b01290107f236.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 21:54:43 GMT
+    - Thu, 16 Aug 2018 19:04:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5P5tccHKeAwKKsisdrvF40; path=/
+    - PHPSESSID=F2zfZ14aOoBq%2CE8KV9q5P3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 21:54:43 GMT
+recorded_at: Thu, 16 Aug 2018 19:04:33 GMT
