--- a/www.nass.gov.ng/7bb83496f9eed507ed72a47ef8be788047cf1904.yml
+++ b/www.nass.gov.ng/7bb83496f9eed507ed72a47ef8be788047cf1904.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 10:18:32 GMT
+    - Fri, 17 Aug 2018 20:37:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=k72UaMATInNcw8L1goXbV3; path=/
+    - PHPSESSID=LwnHg9GDiYA-1j%2Codfql93; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 10:18:32 GMT
+recorded_at: Fri, 17 Aug 2018 20:37:54 GMT
