--- a/www.nass.gov.ng/c02324c012680cdbf0bf9f555204bc8476b225c0.yml
+++ b/www.nass.gov.ng/c02324c012680cdbf0bf9f555204bc8476b225c0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 10:39:52 GMT
+    - Fri, 17 Aug 2018 20:55:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=aUx7R0snOTsO1yN%2CbYrtL3; path=/
+    - PHPSESSID=5S1KTarF0JRqJqmzVOMn31; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 10:39:52 GMT
+recorded_at: Fri, 17 Aug 2018 20:55:48 GMT
