--- a/www.nass.gov.ng/8b717662351853ca45fa91605b445d8b0b6184e9.yml
+++ b/www.nass.gov.ng/8b717662351853ca45fa91605b445d8b0b6184e9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 10:40:53 GMT
+    - Fri, 17 Aug 2018 20:56:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qSOjbg8afbFtbyFOISJkX2; path=/
+    - PHPSESSID=D5DOVQ5Cf%2CQPEpFwaGDSG2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 10:40:53 GMT
+recorded_at: Fri, 17 Aug 2018 20:56:59 GMT
